<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="154dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.095" />

        <SurfaceView
            android:id="@+id/colorPreview"
            android:layout_width="305dp"
            android:layout_height="221dp"
            android:background="@color/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <SeekBar
            android:id="@+id/redSeekBar"
            android:max="255"
            android:progress="0"
            android:progressTint="@color/red_seek_bar"
            android:thumbTint="@color/red_seek_bar"
            android:layout_width="255dp"
            android:layout_height="24dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colorPreview" />

        <SeekBar
            android:id="@+id/greenSeekBar"
            android:max="255"
            android:progress="0"
            android:progressTint="@color/green_seek_bar"
            android:thumbTint="@color/green_seek_bar"
            android:layout_width="255dp"
            android:layout_height="24dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/redSeekBar" />

        <SeekBar
            android:id="@+id/blueSeekBar"
            android:max="255"
            android:progress="0"
            android:progressTint="@color/blue_seek_bar"
            android:thumbTint="@color/blue_seek_bar"
            android:layout_width="255dp"
            android:layout_height="24dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greenSeekBar" />

        <EditText
            android:id="@+id/redNumberView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="42dp"
            android:importantForAutofill="noExcludeDescendants"
            android:importantForAccessibility="noHideDescendants"
            android:padding="0dp"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:lines="1"
            android:hint="@string/colorHint"
            android:text="@string/red_text_number"
            android:textAlignment="center"
            android:textColor="@color/red_seek_bar"
            android:textSize="12sp"
            android:cursorVisible="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.347"
            app:layout_constraintStart_toEndOf="@+id/redSeekBar"
            app:layout_constraintTop_toBottomOf="@+id/colorPreview" />

        <EditText
            android:id="@+id/greenNumberView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="21dp"
            android:importantForAutofill="noExcludeDescendants"
            android:importantForAccessibility="noHideDescendants"
            android:padding="0dp"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:lines="1"
            android:hint="@string/colorHint"
            android:text="@string/green_text_number"
            android:textAlignment="center"
            android:textColor="@color/green_seek_bar"
            android:textSize="12sp"
            android:cursorVisible="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.357"
            app:layout_constraintStart_toEndOf="@+id/greenSeekBar"
            app:layout_constraintTop_toBottomOf="@+id/redNumberView" />

        <EditText
            android:id="@+id/blueNumberView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:importantForAccessibility="noHideDescendants"
            android:importantForAutofill="noExcludeDescendants"
            android:padding="0dp"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:lines="1"
            android:hint="@string/colorHint"
            android:text="@string/blue_text_number"
            android:textAlignment="center"
            android:textColor="@color/blue_seek_bar"
            android:textSize="12sp"
            android:cursorVisible="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toEndOf="@+id/blueSeekBar"
            app:layout_constraintTop_toBottomOf="@+id/greenNumberView" />

</androidx.constraintlayout.widget.ConstraintLayout>